k8s/gateway/gateway-class.yaml
apiVersion: networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: stde-gateway-class
spec:
  controller: k8s.io/ingress-nginx
  parameters:
    apiGroup: networking.k8s.io
    kind: Ingress
    name: ingress
