k8s/gateway/gateway.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: study-earn-gateway
spec:
  controllerName: k8s.io/ingress-nginx
  gatewayClassName: stde-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
  hostname: study-earn.com
  routes:
    kind: HTTPRoute
    namespaces:
      from: All
